# interaction_api

./: Cargo.toml  Dockerfile  kafka.md
.github/workflows/: deploy.yml
k8s/: deployment.yaml  ingress.yaml  middleware.yaml  namespace.yaml  rbac.yaml  service.yaml
src/: main.rs
