[package]
name = "interaction_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
